[metadata]
name = WordGen
version = 0.1.0
author = Alex Zhao
author_email = xxfaya.dragonxx@gmail.com
description = A password wordlist generation framework
long_description = file: README.md
long_description_content_type = text/markdown
License = GPLv3
license_files = LICENSE.txt
url = https://github.com/KalionCode/wordgen
project_urls =
    Bug Tracker = https://github.com/KalionCode/wordgen/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPL License
    Operating System :: OS Independent

[options]
packages = wordgen
python_requires = >=3.4

